# Django

./: .gitignore  catalog.html  category.html  contacts.html  home.html  main.py  pyproject.toml
